# hello-prisma/src/routes/relatorios.routes.ts
@@ -8,6 +8,7 @@ router.use(authMiddleware);
 
 router.post("/", RelatorioController.create);
 router.get("/", RelatorioController.findAll);
+router.get("/:id/pdf-layout", RelatorioController.getPdfLayout);
 router.get("/:id", RelatorioController.findById);
 router.put("/:id", RelatorioController.update);
 router.delete("/:id", RelatorioController.delete);
